--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="menu"></div>
     <div id="portal"></div>
     <div id="alert"></div>
   </body>
